# DocHierarchy

./: Dockerfile.libreoffice  Dockerfile.streamlit  README.md  convert_server.py  docker-compose.yml  pyproject.toml
app/: main.py
converted_files/: request.docx
output_txt/: temp_cf35c9c98a844d19a533fdf4d6e69598.docx  temp_cf35c9c98a844d19a533fdf4d6e69598_43dd5b4f4b6045cea782893bb3664a80.txt
streamlit/: logics.py  main.py  parser.py  table_extract.py
streamlit/converter/: docx_converter.py
streamlit/converter/converted_files/: 신탁계약서.docx  신탁계약서.hwp
streamlit/output_txt/: temp_f877f91e7c6f4e119a53f4617c5c1f0c.docx
